@@ -24,6 +24,7 @@ enum {
   FINUFFT_ERR_BINSIZE_NOTVALID       = 18,
   FINUFFT_ERR_INSUFFICIENT_SHMEM     = 19,
   FINUFFT_ERR_NUM_NU_PTS_INVALID     = 20,
-  FINUFFT_ERR_INVALID_ARGUMENT       = 21
+  FINUFFT_ERR_INVALID_ARGUMENT       = 21,
+  FINUFFT_ERR_LOCK_FUNS_INVALID      = 22
 };
 #endif
